--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,15 @@
     object-fit: cover;
 }
 
+.social{
+    width: 30%;
+    max-width: 50px;
+}
+
+footer{
+    color: gray;    
+}
+
 div{
     border: 1px solid red;
 }
