--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,7 @@
 }
 
 .social{
-    width: 30%;
+    width: 15%;
     max-width: 50px;
 }
 
@@ -18,6 +18,6 @@ footer{
     color: gray;    
 }
 
-div{
+div, form{
     border: 1px solid red;
 }
