--- a/style/style.css
+++ b/style/style.css
@@ -22,6 +22,10 @@ footer{
     margin-right: 50vw;
 }
 
+.contact{
+    height: 86vh;
+}
+
 /*div, form, section, label, input, p{
     border: 1px solid red;
 }*/
