--- a/style/style.css
+++ b/style/style.css
@@ -1,43 +1,100 @@
-.logo{
+*{
+    margin: 0;
+    padding: 0;
+}
+.logo {
     width: 50%;
     max-width: 100px;
 }
 
-.carousel-img{
+.carousel-img {
     width: 100%;
     height: 50vh;
     object-fit: cover;
 }
 
-.social{
+.social {
     padding-left: 2vw;
     width: 100%;
     max-width: 50px;
 }
 
-footer{
-    color: gray;    
-}
-.resp-md{
+.resp-md {
     margin-right: 50vw;
 }
 
-.contact{
+.contact {
     height: 86vh;
+}
+
+.img-card {
+    height: 100%;
+    object-fit: cover;
+}
+
+table {
+    font-size: 3.5vw;
+}
+
+.h-details,
+.main-stats {
+    height: 100vh;
+}
+
+.card,
+.main-stats {
+    width: 90%;
+}
+
+.text-fs {
+    font-size: 3.5vw;
+}
+
+footer {
+    color: gray;
 }
 
 /*div, form, section, label, input, p{
     border: 1px solid red;
 }*/
 
+@media only screen and (min-width:768px) {
+
+    .h-details,
+    .main-stats {
+        height: 80vh;
+    }
+
+    table {
+        font-size: 1.5vw;
+    }
+
+    .text-fs {
+        font-size: 2vw;
+    }
+}
+
 @media only screen and (max-width:950px) {
-    .resp-md{
+    .resp-md {
         margin-left: 50vw;
     }
 }
 
 @media only screen and (min-width:1200px) {
-    .social{
+    .social {
         max-width: 70px;
+    }
+
+    .h-details,
+    .main-stats {
+        height: 86vh;
+    }
+
+    table {
+        font-size: 1vw;
+    }
+
+    .text-fs {
+        font-size: 1.5vw;
     }
 }
